# pureman

./: .gitignore  ChangeLog.md  LICENSE  README.md  main.hs  pureman.cabal
src/: Main.hs
