cabal-version: 1.12

name:           pureman
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/jasonliang512/pureman#readme>
homepage:       https://github.com/jasonliang512/pureman#readme
bug-reports:    https://github.com/jasonliang512/pureman/issues
author:         Jason Liang
copyright:      2019 Jason Liang
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/pureman

executable pureman
  main-is: Main.hs
  other-modules:
      Paths_pureman
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , containers
    , random
  default-language: Haskell2010
